{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 143,
  "lineage": "8c2c9270-d77b-6753-132e-9b2185e0bff6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_vnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkInterfaces/dsb-dev-web-lin-nic1",
            "internal_domain_name_suffix": "swoojh35yclulj2zsqq2uehjhh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.8",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/publicIPAddresses/dsb-dev-web-pub",
                "subnet_id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/virtualNetworks/dsb-dev-myvnet/subnets/dsb-dev-myweb"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2B-01-4F",
            "name": "dsb-dev-web-lin-nic1",
            "private_ip_address": "10.0.1.8",
            "private_ip_addresses": [
              "10.0.1.8"
            ],
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "virtual_machine_id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Compute/virtualMachines/dsb-dev-web-vm"
          },
          "dependencies": [
            "azurerm_public_ip.webpubip",
            "azurerm_resource_group.rsg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.myvnet",
            "random_string.abinrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-db-nsg1",
            "location": "eastus",
            "name": "dsb-dev-db-nsg1",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Sec-Rule-22",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Sec-Rule-443",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Sec-Rule-80",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rsg",
            "random_string.abinrandom"
          ]
        },
        {
          "index_key": "web-nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-web-nsg1",
            "location": "eastus",
            "name": "dsb-dev-web-nsg1",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Sec-Rule-22",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Sec-Rule-443",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Sec-Rule-80",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rsg",
            "random_string.abinrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db-security-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-db-nsg1/securityRules/Sec-Rule-22",
            "name": "Sec-Rule-22",
            "network_security_group_name": "dsb-dev-db-nsg1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rsg",
            "random_string.abinrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-db-nsg1/securityRules/Sec-Rule-80",
            "name": "Sec-Rule-80",
            "network_security_group_name": "dsb-dev-db-nsg1",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rsg",
            "random_string.abinrandom"
          ]
        },
        {
          "index_key": "200",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-db-nsg1/securityRules/Sec-Rule-443",
            "name": "Sec-Rule-443",
            "network_security_group_name": "dsb-dev-db-nsg1",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rsg",
            "random_string.abinrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web-security-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-web-nsg1/securityRules/Sec-Rule-22",
            "name": "Sec-Rule-22",
            "network_security_group_name": "dsb-dev-web-nsg1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rsg",
            "random_string.abinrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-web-nsg1/securityRules/Sec-Rule-80",
            "name": "Sec-Rule-80",
            "network_security_group_name": "dsb-dev-web-nsg1",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rsg",
            "random_string.abinrandom"
          ]
        },
        {
          "index_key": "200",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-web-nsg1/securityRules/Sec-Rule-443",
            "name": "Sec-Rule-443",
            "network_security_group_name": "dsb-dev-web-nsg1",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rsg",
            "random_string.abinrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "webpubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/publicIPAddresses/dsb-dev-web-pub",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.127.105.86",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dsb-dev-web-pub",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rsg",
            "random_string.abinrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "mydb",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/virtualNetworks/dsb-dev-myvnet/subnets/dsb-dev-mydb",
            "name": "dsb-dev-mydb",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "virtual_network_name": "dsb-dev-myvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rsg",
            "azurerm_virtual_network.myvnet",
            "random_string.abinrandom"
          ]
        },
        {
          "index_key": "myweb",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/virtualNetworks/dsb-dev-myvnet/subnets/dsb-dev-myweb",
            "name": "dsb-dev-myweb",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "virtual_network_name": "dsb-dev-myvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rsg",
            "azurerm_virtual_network.myvnet",
            "random_string.abinrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsubnetassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/virtualNetworks/dsb-dev-myvnet/subnets/dsb-dev-mydb",
            "network_security_group_id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-db-nsg1",
            "subnet_id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/virtualNetworks/dsb-dev-myvnet/subnets/dsb-dev-mydb"
          },
          "dependencies": [
            "azurerm_virtual_network.myvnet",
            "random_string.abinrandom",
            "azurerm_network_security_group.nsg",
            "azurerm_network_security_rule.db-security-rule",
            "azurerm_network_security_rule.web-security-rule",
            "azurerm_resource_group.rsg",
            "azurerm_subnet.subnets"
          ]
        },
        {
          "index_key": "web-nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/virtualNetworks/dsb-dev-myvnet/subnets/dsb-dev-myweb",
            "network_security_group_id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-web-nsg1",
            "subnet_id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/virtualNetworks/dsb-dev-myvnet/subnets/dsb-dev-myweb"
          },
          "dependencies": [
            "azurerm_virtual_network.myvnet",
            "random_string.abinrandom",
            "azurerm_network_security_group.nsg",
            "azurerm_network_security_rule.db-security-rule",
            "azurerm_network_security_rule.web-security-rule",
            "azurerm_resource_group.rsg",
            "azurerm_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9fe49c95-c0bf-4597-a799-9421ca10e93f",
            "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/virtualNetworks/dsb-dev-myvnet",
            "location": "eastus",
            "name": "dsb-dev-myvnet",
            "resource_group_name": "dsb-dev-myrsg-rkrgoc",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/virtualNetworks/dsb-dev-myvnet/subnets/dsb-dev-myweb",
                "name": "dsb-dev-myweb",
                "security_group": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-web-nsg1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/virtualNetworks/dsb-dev-myvnet/subnets/dsb-dev-mydb",
                "name": "dsb-dev-mydb",
                "security_group": "/subscriptions/9de3b65e-95d3-40e0-98c5-e3552eb90c6c/resourceGroups/dsb-dev-myrsg-rkrgoc/providers/Microsoft.Network/networkSecurityGroups/dsb-dev-db-nsg1"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "random_string.abinrandom",
            "azurerm_resource_group.rsg"
          ]
        }
      ]
    }
  ]
}